# kvasir

./: .gitignore  CONTEXT.md  Cargo.toml
.omx/: tmp-pr-16-body.md
apple/KvasirViewer/: Package.swift
apple/KvasirViewer/LaunchAgents/: dev.kvasir.kvasird.plist
apple/KvasirViewer/Sources/KvasirViewer/: DaemonFallbackOverviewClient.swift  KvasirClientOverviewAdapter.swift  KvasirSettingsScreen.swift  KvasirViewerApp.swift  OverviewScreen.swift  ProductionModelFactory.swift
apple/KvasirViewer/Sources/KvasirViewerCore/: KvasirViewerModel.swift  LaunchAgent.swift  OverviewDashboard.swift  OverviewSocketClient.swift  TraceInspector.swift  UsageRollupExplorer.swift
apple/KvasirViewer/Tests/KvasirViewerCoreTests/: KvasirViewerModelTests.swift  LaunchAgentTests.swift  OverviewDashboardTests.swift  OverviewSocketClientTests.swift  TraceInspectorTests.swift  UsageRollupExplorerTests.swift
apple/KvasirViewer/Tests/KvasirViewerTests/: KvasirViewerAppTests.swift
apple/KvasirViewer/scripts/: build-app.sh
crates/kvasir-client/: Cargo.toml
crates/kvasir-client/src/: client.rs  conversions.rs  error.rs  lib.rs  setup.rs  transport.rs  types.rs
crates/kvasir-client/src/setup/: fs_atomic.rs  generated_files.rs  managed_state.rs  uninstall.rs
crates/kvasir-client/tests/: daemon_query.rs
crates/kvasir-core/: Cargo.toml
crates/kvasir-core/src/: explorer.rs  lib.rs  otlp.rs  pricing.rs  rpc.rs  setup.rs  store.rs  usage.rs
crates/kvasir-core/tests/: setup_config.rs
crates/kvasir-core/tests/fixtures/: codex_turn_token_usage_otlp.json
crates/kvasir-uniffi-bindgen/: Cargo.toml
crates/kvasird/: Cargo.toml
crates/kvasird/src/: lib.rs  main.rs  setup.rs
crates/kvasird/tests/: golden_replay.rs
crates/kvasird/tests/fixtures/: claude_token_usage_otlp.json  claude_token_usage_otlp.pb.base64  copilot_token_usage_otlp.json
docs/adr/: 0001-daemon-viewer-split-over-local-socket.md  0002-sqlite-store-with-rollup-tables.md  0003-full-content-capture-and-encryption.md  0004-setup-shim-auto-managed-config-and-shell-hook.md
