[workspace]
members = ["crates/kvasir-core", "crates/kvasird"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.4.0"
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "metrics", "with-serde"] }
prost = "0.14.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = "0.5.2"
