[workspace]
members = [
    "crates/kvasir-client",
    "crates/kvasir-core",
    "crates/kvasir-uniffi-bindgen",
    "crates/kvasird",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
getrandom = "0.3.4"
http = "1.4.0"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "logs", "metrics", "trace", "with-serde"] }
prost = "0.14.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = "0.5.2"
uniffi = "0.31.2"
zeroize = { version = "1.9.0", features = ["derive"] }
