[package]
name = "kvasir-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
chrono.workspace = true
kvasir-core = { path = "../kvasir-core" }
serde_json.workspace = true
thiserror.workspace = true
uniffi.workspace = true

[dev-dependencies]
anyhow.workspace = true
http.workspace = true
kvasird = { path = "../kvasird" }
reqwest.workspace = true
tempfile.workspace = true
tokio.workspace = true
