[package]
name = "kvasird"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
kvasir-core = { path = "../kvasir-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
base64.workspace = true
chrono.workspace = true
http.workspace = true
reqwest.workspace = true
tempfile.workspace = true
