[package]
name = "kvasird"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
keyring.workspace = true
kvasir-core = { path = "../kvasir-core" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
base64.workspace = true
chrono.workspace = true
http.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
